* 2007-12-20 - choeger@open-xchange.com

  - Bugfix ID#10659 [HEAD] "Object was not returned" in database pool after context operations

* 2007-12-11 - choeger@open-xchange.com

  - Bugfix ID#10596 using read connections results into permanent problems in replication scenarios

* 2007-12-07 - dennis.sieben@open-xchange.com

  - Bugfix ID#10577 [HEAD ]admin does breake Database replication
  - Bugfix ID#10578 [HEAD] setDefaultSenderAddress does not work in changeUser

* 2007-11-13 - dennis.sieben@open-xchange.com

  - Bugfix ID#10180 RuntimeExceptions aren't logged
  - Bugfix ID#10188 Everytime a write connection is used it should be checked if a rollback is made there
  
* 2007-11-12 - choeger@open-xchange.com

  - Bugfix ID#9835 [L3] hanging or long taking command line tools
  
* 2007-11-08 - dennis.sieben@open-xchange.com

  - Bugfix ID#10125 No rollback if filestore creation fails during createuser
  
* 2007-11-07 - manuel.kraft@open-xchange.com

  - Bugfix ID#10050 Database leftovers of deleted contexts

* 2007-11-06 - dennis.sieben@open-xchange.com

  - Bugfix ID#10072 L3: display name of contact blocks creation of new user
  
* 2007-10-31 - manuel.kraft@open-xchange.com

   - Bugfix ID#10005 [HEAD] Connections to database not returned in admindaemon

* 2007-10-29 - dennis.sieben@open-xchange.com

  - Bugfix ID#9983 Changing user by name isn't running any more

* 2007-10-23 - dennis.sieben@open-xchange.com

  - Bugfix ID#9620 RMI Api documentation lacks proper language handling description

* 2007-10-23 - manuel.kraft@open-xchange.com

   - Bugfix ID#9938 [HEAD] cache does not get invalidated when users are added to or removed from groups

* 2007-10-18 - manuel.kraft@open-xchange.com

   - Bugfix ID#9860 Unable to delete Contact: Context 30 Contact 2 on delete context

* 2007-10-15 - manuel.kraft@open-xchange.com
 
  - Bugfix ID#9806 [HEAD] username can't be changed
  - Bugfix ID#9805 [HEAD] No error message when username is going to be changed
